--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "autoprefixer": "^9.7.5",
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "lodash": "^4.17.15",
     "tailwindcss": "^1.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-socket.io": "^3.0.9",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
