--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "autoprefixer": "^9.7.5",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.4",
     "lodash": "^4.17.15",
+    "moment": "^2.25.3",
     "tailwindcss": "^1.2.0",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.0",
     "vue-router": "^3.1.6",
     "vue-socket.io": "^3.0.9",
     "vuex": "^3.1.3"
